Changelog
=========

after 0.4
---------


0.4 - 2009-11-19
----------------

- uptime is given in days now, instead of seconds which is much more readable.
  `fetch` still returns seconds for backward compatibility,
  but `config` tells to compute the value (``uptime.cdef uptime,86400,/``)
  [fRiSi]

- `zeo_munin.py` can handle multiple Databases now
  [fRiSi]

- Documented munin data and configuration in README
  [fRiSi]

- Corrected labels in `Per connection caches` graph
  [fRiSi]

- Added `dbsize` graph to `munin_client.py`
  [fRiSi]


0.3 - 2009-02-25
----------------

- Changed an import of Zope.App to Zope2.App for compatibility with recent
  Zope versions.
  [hannosch]

- Added package infrastructure.
  [hannosch]

- Moved the source code from https://svn.gocept.com/repos/gocept/ZNagios/trunk
  to the svn.zope.org repository at revision 29315.
  [hannosch]

0.2 - 2008-05-26
----------------

- Remove hard-coded authorization string.
  [ctheune]

- A script for reading data from a ZEO monitor server.
  [ctheune]

- Added basic munin support.
  [ctheune]

- Original implementation.